# shadcn-ui-rs

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  SECURITY.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
components/: accordion.rs  alert.rs  alert_dialog.rs  badge.rs  breadcrumb.rs  button.rs  button_group.rs  card.rs  checkbox.rs  collapsible.rs  context_menu.rs  dialog.rs  drawer.rs  dropdown_menu.rs  empty.rs  field.rs  hover_card.rs  input.rs  item.rs  kbd.rs  label.rs  menubar.rs  mod.rs  navigation_menu.rs  pagination.rs  popover.rs  radio.rs  scroll_area.rs  select.rs  separator.rs  sheet.rs  sidebar.rs  skeleton.rs  slider.rs  sonner.rs  switch.rs  table.rs  tabs.rs  toast.rs  toggle.rs  (+3 more)
crates/cli/: Cargo.toml
crates/cli/src/: component_sources.rs  config.rs  main.rs
crates/cli/src/commands/: add.rs  diff.rs  init.rs  list.rs  mod.rs  remove.rs  theme.rs  update.rs
crates/registry/: Cargo.toml
crates/registry/src/: lib.rs
crates/theme/: Cargo.toml
crates/theme/src/: colors.rs  lib.rs  presets.rs
docs/: components.md  getting-started.md  roadmap.md  theming.md
docs/plans/: 2026-02-11-shadcn-ui-rs-design.md  2026-02-12-phase2-implementation.md  2026-02-12-phase3-implementation.md  2026-02-12-phase4-implementation.md
examples/basic-form/: Cargo.toml  README.md
examples/basic-form/src/: main.rs  theme.rs
examples/basic-form/src/components/ui/: alert.rs  alert_dialog.rs  avatar.rs  button.rs  card.rs  checkbox.rs  dialog.rs  drawer.rs  empty.rs  hover_card.rs  input.rs  kbd.rs  label.rs  mod.rs  popover.rs  progress.rs  radio.rs  scroll_area.rs  select.rs  separator.rs  sheet.rs  slider.rs  sonner.rs  switch.rs  table.rs  textarea.rs  toast.rs  toggle.rs  toggle_group.rs  tooltip.rs  typography.rs
templates/default/: Cargo.toml.tmpl  README.md.tmpl
templates/default/src/: main.rs.tmpl  theme.rs.tmpl
