[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/theme",
    "crates/registry",
]
exclude = [
    "examples/basic-form",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/martinadamsdev/shadcn-ui-rs"
rust-version = "1.93.0"

[workspace.dependencies]
# Shared dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"

# GPUI
gpui = "0.2"

# CLI dependencies
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
indicatif = "0.17"
toml = "0.8"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# Pin core-text to 21.0.0 to avoid core-graphics version conflict
# (core-text 21.1.0 uses core-graphics 0.25, but gpui/cocoa/zed-font-kit use 0.24)
core-text = "=21.0.0"
